# planner

./: .gitignore  BRANCH_DIAGRAM.md  CHANGELOG_WINDOWS_COMPATIBILITY.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MERGE_CONFLICTS_README.md  PLATFORM_COMPATIBILITY.md  POLISH_FIXES_V2.md  README.md  README_DEV.md  SETUP_WIZARD_SUMMARY.md  START_HERE.md  noah-planner.desktop.example  resolve_merge_conflicts.sh  run.bat  run.sh  test_focus_sessions.py
cmake/: StripQmldirPrefer.cmake
data/: config.json  diagnostics.json  reviews.json  subjects.json
docs/: DRAG_DROP_IMPLEMENTATION.md  FOCUS_SESSIONS.md  FOCUS_SESSIONS_QUICKSTART.md  FOCUS_SESSIONS_UI.md  IMPLEMENTATION_SUMMARY_FOCUS.md  INDEX.md  PDF_EXPORT.md  PDF_EXPORT_IMPLEMENTATION.md  PDF_EXPORT_TEST_PLAN.md  PRIORITY_FEATURE.md  PRIORITY_UI.md  README.md  SETUP_WIZARD.md  TESTING_SETUP_WIZARD.md  UI_GUIDE_SPACED_REPETITION.md  priority_test.cpp
docs/development/: CHANGELOG_WINDOWS_COMPATIBILITY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  README.md
docs/exports/: README.md  SAMPLES.md
docs/features/: README.md  SPACED_REPETITION.md
docs/maintenance/: CONFLICT_ANALYSIS.md  MERGE_CONFLICT_RESOLUTION_GUIDE.md  README.md  START_HERE.md  WICHTIG_IMPORTANT.md
docs/setup/: PLATFORM_COMPATIBILITY.md  README.md  WINDOWS_SETUP.md
docs/testing/: TESTING_GUIDE.md
src/: ExamDialog.cpp  ExamDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: Category.h  CategoryRepository.cpp  CategoryRepository.h  EventRepository.cpp  EventRepository.h  Exam.h  FocusSession.cpp  FocusSession.h  FocusSessionRepository.cpp  FocusSessionRepository.h  IcsImportService.cpp  IcsImportService.h  PlannerService.cpp  PlannerService.h  PomodoroTimer.cpp  PomodoroTimer.h  Priority.h  PriorityRules.h  QuickAddParser.cpp  QuickAddParser.h  Review.h  ScheduleExporter.cpp  ScheduleExporter.h  SpacedRepetitionService.cpp  SpacedRepetitionService.h  Subject.h  Task.h
src/models/: EventModel.cpp  EventModel.h  ExamModel.cpp  ExamModel.h  ReviewModel.cpp  ReviewModel.h  TaskFilterProxy.cpp  TaskFilterProxy.h  TaskModel.cpp  TaskModel.h
src/ui/: AppState.cpp  AppState.h  PlannerBackend.cpp  PlannerBackend.h  TaskDelegate.cpp  TaskDelegate.h  ToastManager.cpp  ToastManager.h
src/ui/components/: DayCardWidget.cpp  DayCardWidget.h  FilterChip.cpp  FilterChip.h
src/ui/qml/: App.qml  Main.qml  qmldir
src/ui/qml/components/: CategoryPicker.qml  CommandPalette.qml  DayCell.qml  EventChip.qml  ExportDialog.qml  FilterPill.qml  FocusControls.qml  GlassPanel.qml  IconGlyph.qml  PillButton.qml  PomodoroOverlay.qml  PomodoroStats.qml  QuickAddDialog.qml  QuickAddPill.qml  ReviewDialog.qml  ReviewIndicator.qml  SearchField.qml  SegmentedControl.qml  SettingsDialog.qml  SetupWizard.qml  StreakBadge.qml  TimerOverlay.qml  Toast.qml  ToastHost.qml  TodayTaskDelegate.qml  WeeklyHeatmap.qml  ZenToggleButton.qml  qmldir
src/ui/qml/styles/: ThemeStore.qml  qmldir
src/ui/qml/utils/: Safe.js
src/ui/qml/views/: AgendaView.qml  MonthView.qml  SidebarToday.qml  WeekView.qml  qmldir
src/ui/styles/: dark.qss  light.qss
src/ui/theme/: ThemeManager.cpp  ThemeManager.h
src/ui/views/: MonthView.cpp  MonthView.h
tests/: edge_cases_test.cpp  planner_service_test.cpp  priority_rules_test.cpp  quick_add_parser_test.cpp  spaced_repetition_test.cpp
tests/qml/: tst_component_smoke.qml
